--- a/search-results.html
+++ b/search-results.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Search the Library of Congress</title>
 </head>
-<body>
-    
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+
+<body class="cyan darken-4">
+    <div class="container truncate light-blue lighten-5" id="results-window">
+        <div class="row" id="results">
+            <div class="col s3" id="search-box">
+                <h3>Library of Congress Search Engine</h3>
+                <div class="input-fieild col s12">
+                    <input placeholder="Search input" id="search-term" type="text" class="validate">
+                    <label for="search-term"></label>
+                </div>
+                <div class="input-fieild col s10"></div>
+                <select name="format-select" id="search-format" class="browser-default">
+                    <option value="" disabled selected>Search format</option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
+                </select>
+                <div class="col s12">
+                    <a class="waves-effect waves-light btn-small">Search</a>
+                    <a class="waves-effect waves-light red darken-1 btn-small">Go Back</a>
+                </div>
+            </div>
+            <div class="col s9" id="results-display">
+                <h3 class="center-align"> Showing results for Blank</h3>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
