--- a/search-results.html
+++ b/search-results.html
@@ -35,8 +35,48 @@
             </div>
             <div class="col s9" id="results-display">
                 <h3 class="center-align"> Showing results for Blank</h3>
+                <div class="col s12">
+                    <div class="card blue-grey darken-1">
+                        <div class="card-content white-text">
+                            <span class="article-title">Article Title</span>
+                            <p id="article-date">Submission date</p>
+                            <p id="article-subject">Subjects</p>
+                            <p id="article-description">Description</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#" class="waves-effect waves-light btn-small" id="read-more">Read More</button> </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12">
+                    <div class="card blue-grey darken-1">
+                        <div class="card-content white-text">
+                            <span class="article-title">Article Title</span>
+                            <p id="article-date">Submission date</p>
+                            <p id="article-subject">Subjects</p>
+                            <p id="article-description">Description</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#" class="waves-effect waves-light btn-small" id="read-more">Read More</button> </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12">
+                    <div class="card blue-grey darken-1">
+                        <div class="card-content white-text">
+                            <span class="article-title">Article Title</span>
+                            <p id="article-date">Submission date</p>
+                            <p id="article-subject">Subjects</p>
+                            <p id="article-description">Description</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#" class="waves-effect waves-light btn-small" id="read-more">Read More</button> </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./assets/js/script.js"></script>
